images: added images for postimg

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <tr>
                 <td>
                   <a href="http://teamtreehouse.com"> 
-                    <img src="img/production/treehouse-logo.png"  class="header-img-treehouse" style="width:130px; height:29px;"  alt="treehouse logo">
+                    <img src="https://i.postimg.cc/pdPC1pC9/treehouse-logo.png"  class="header-img-treehouse" style="width:130px; height:29px;"  alt="treehouse logo">
                   </a>
                   
                 </td>
@@ -129,7 +129,7 @@
        <table width="100%" class="festival-table">
          <tr>
            <td>
-             <img src="img/production/festival.png"  height="300" width="600" alt="tree house festival hero image" style="padding-bottom:50px">
+             <img src="https://i.postimg.cc/pT6BTkH8/festival.png"  height="300" width="600" alt="tree house festival hero image" style="padding-bottom:50px">
            </td>
          </tr>
        </table>
@@ -302,7 +302,7 @@
        <table class="giveaway-table" width="100%">
          <tr>
            <td>
-             <img src="img/production/giveaway.png" height="300" width="600" alt="tree house giveaway hero image" style="padding-bottom:50px">
+             <img src="https://i.postimg.cc/dtT57MD0/giveaway.png" height="300" width="600" alt="tree house giveaway hero image" style="padding-bottom:50px">
            </td>
          </tr>
        </table>
@@ -356,7 +356,7 @@
               <table class="left-column" align="left">
                 <tr>
                   <td>
-                    <img src="img/production/days-code.png" id="days-code-img" width="175" height="195" alt="100 days of code image" style="padding: 10px 0px; margin-left: 30px;">
+                    <img src="https://i.postimg.cc/2y12FMw2/days-code.png" id="days-code-img" width="175" height="195" alt="100 days of code image" style="padding: 10px 0px; margin-left: 30px;">
                   </td>
                   </tr>
                 </table>
@@ -395,7 +395,7 @@
               <table class="left-column" align="left" width="25%25">
                 <tr>
                   <td style="padding:0px 20px;">
-                    <img src="img/production/tribaja-logo.png" id="tribaja" alt="Tribaja Logo" style="width:90px; height:28px;">
+                    <img src="https://i.postimg.cc/1zMBxs7v/tribaja-logo.png" id="tribaja" alt="Tribaja Logo" style="width:90px; height:28px;">
                   </td>
                 </tr>
               </table>
@@ -409,14 +409,14 @@
               <table class="left-column" align="left" width="25%">
                 <tr>
                   <td style="padding:0px 20px;">
-                    <img src="img/production/pdxwit-logo.png" id="pdxwit" alt="PDXWIT Logo" style="width:90px; height:28px;">
+                    <img src="https://i.postimg.cc/L8KNLyZ3/pdxwit-logo.png" id="pdxwit" alt="PDXWIT Logo" style="width:90px; height:28px;">
                   </td>
                 </tr>
               </table>
               <table class="left-column" align="left" width="25%">
                 <tr>
                   <td style="padding:0px 20px;">
-                    <img src="img/production/chicktech-logo.png" id="chicktech" alt="Chick Tech Logo" style="width:90px; height:28px;">
+                    <img src="https://i.postimg.cc/BvCYqxbc/chicktech-logo.png" id="chicktech" alt="Chick Tech Logo" style="width:90px; height:28px;">
                   </td>
                 </tr>
               </table>
@@ -431,48 +431,47 @@
         <table class="footer-table" >
           <tr>
             <td align="center" style="padding-bottom: 20px;">
-              <p style="line-height: 25px; font-size:15px; margin:0px;">
+              <p style="line-height: 25px; font-size:15px; margin:0px; ">
                 Treehouse Island, Inc., 9450 Southwest Gemini Drive, PMB 90505, Beaverton, OR 97008, United States
               </p>
-              <a style="color: #5fcf80; padding:0px 2px; font-size:12px;"  href="#">
+              <a style="color: #5fcf80; padding:0px 2px; font-size:12px; text-transform: capitalize;"  href="#">
                 Unsubscribe
               </a>
-              <a style="color: #5fcf80; padding:0px 2px; font-size:12px;" href="#">
+              <a style="color: #5fcf80; padding:0px 2px; font-size:12px; text-transform: capitalize;" href="#">
                 Manage
               </a>
-              <a style="color: #5fcf80; padding:0px 2px; font-size:12px;" href="#">
+              <a style="color: #5fcf80; padding:0px 2px; font-size:12px; text-transform: capitalize;" href="#">
                 Preferences
               </a>
             </td>
           </tr>
           <tr>
-            <td align="center">
+            <td align="center" ">
               <table class="social-media-table">
                 <td>
                   <a href="http://twitter.com">
-                    <img src="img/production/twitter-icon.png" style="width:34px; height:35px; padding:8px 5px;" alt="twitter icon">
+                    <img src="https://i.postimg.cc/x1vgRKvD/twitter-icon.png" style="width:34px; height:35px; padding:8px 5px;" alt="twitter icon">
                   </a>
                 </td>
                 <td>
                   <a href="http://instagram.com">
-                    <img src="img/production/instagram-icon.png" style="width:34px; height:35px; padding:8px 5px;"   alt="instagram icon"> 
+                    <img src="https://i.postimg.cc/L5GvyDQR/instagram-icon.png" style="width:34px; height:35px; padding:8px 5px;"   alt="instagram icon"> 
                   </a>
-                  
                 </td>
                 <td>
                   <a href="http://youtube.com">
-                    <img src="img/production/youtube-icon.png"  style="width:34px; height:35px; padding:8px 5px;"alt="youtube icon"> 
+                    <img src="https://i.postimg.cc/FRRZN82N/youtube-icon.png"  style="width:34px; height:35px; padding:8px 5px;"alt="youtube icon"> 
                   </a> 
                 </td>
                 <td>
                   <a href="http://linkedin.com">
-                    <img src="img/production/linkedin-icon.png" style="width:34px; height:35px; padding:8px 5px;" alt="twitter icon">
+                    <img src="https://i.postimg.cc/gc7Mkcz5/linkedin-icon.png" style="width:34px; height:35px; padding:8px 5px;" alt="twitter icon">
                   </a>
                 </td>
 
                 <td>
                   <a href="http://facebook.com">
-                    <img src="img/production/facebook-icon.png" style="width:34px; height:35px; padding:8px 5px;" alt="facebook icon">
+                    <img src="https://i.postimg.cc/1tCvFsp8/facebook-icon.png" style="width:34px; height:35px; padding:8px 5px;" alt="facebook icon">
                   </a>
                 </td>
               </table>
