this event: fixed adobe email

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                       <tr>
                         <td width="40%;" style="text-align:center; color:#576467 ;">
                           <p style="font-size: 24px; font-weight: bold;">
-                            9:30AM PST 
+                            9AM
                           </p>
                         </td>
                       </tr>
@@ -216,7 +216,6 @@
                       <tr>
                         <td width="60%; " style="padding-left:10px;">
                           <p style="color:#576467;  line-height: 20px; font-size: 18px; font-weight:bold; font-style:italic;">
-                            	
                             My Developer Journey and Q&A <br> 
                             <span style="font-size: 16px; font-weight:normal; font-style: normal;"> With Aaron Billings (He/Him) and Ryan Mouser (He/Him) </span>  
                           </p>
@@ -402,7 +401,7 @@
               <table class="left-column" align="left" width="25%">
                 <tr>
                   <td style="padding:0px 20px;">
-                    <img src="img/production/adobe-logo.png" id="adobe" alt="Adobe Logo" style="width:90px; height:28px;">
+                    <img src="https://i.postimg.cc/4dN8nmhC/adobe-logo.png" id="adobe" alt="Adobe Logo" style="width:90px; height:28px;">
                   </td>
                 </tr>
               </table>
