fixed alginment issues on responsive

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
           </tr>
           <tr>
             <td>
-              <table class="left-column" align="left" width="25%25">
+              <table class="left-column" align="left" width="25%">
                 <tr>
                   <td style="padding:0px 20px;">
                     <img src="https://i.postimg.cc/1zMBxs7v/tribaja-logo.png" id="tribaja" alt="Tribaja Logo" style="width:90px; height:28px;">
@@ -433,7 +433,7 @@
                   </td>
                 </tr>
               </table>
-              <table class="left-column" align="left" width="25%">
+              <table class="left-column" align="right" width="25%">
                 <tr>
                   <td style="padding:0px 20px;">
                     <img src="https://i.postimg.cc/BvCYqxbc/chicktech-logo.png" id="chicktech" alt="Chick Tech Logo" style="width:90px; height:28px;">
