--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
       width: 100%;
     }
 
+    /* midsizers*/
+    @media only screen and (max-width: 960px){
+        .container{
+          width: 600px;
+        }
+      }
     
-    
+    /* mobile */
     @media only screen and (max-width: 599px){
       .contianer{
         width: 100%;
